packages/preview/sprintf/0.1.0/.nim_runtime/tests/global/tglobalclosure.nim
discard """
  errormsg: "cannot assign local to global variable"
  line: 11
"""

proc main() =
  var x = "hi"
  proc p() =
    echo x

  let a {.global.} = p
  p()

main()
